Add DD instrumentation to aspnetapp with RUM APM Stitching

--- a/samples/aspnetapp/Dockerfile
+++ b/samples/aspnetapp/Dockerfile
@@ -16,4 +16,13 @@ RUN dotnet publish -c release -o /app --no-restore
 FROM mcr.microsoft.com/dotnet/aspnet:5.0
 WORKDIR /app
 COPY --from=build /app ./
+
+RUN apt-get update && apt-get install -y --no-install-recommends wget
+RUN wget https://github.com/DataDog/dd-trace-dotnet/releases/download/v1.21.2-prerelease/datadog-dotnet-apm_1.21.2_amd64.deb
+RUN dpkg -i datadog-dotnet-apm_1.21.2_amd64.deb
+ENV CORECLR_ENABLE_PROFILING=1
+ENV CORECLR_PROFILER={846F5F1C-F9AE-4B07-969E-05C26BC060D8}
+ENV CORECLR_PROFILER_PATH=/opt/datadog/Datadog.Trace.ClrProfiler.Native.so
+ENV DD_INTEGRATIONS=/opt/datadog/integrations.json
+ENV DD_DOTNET_TRACER_HOME=/opt/datadog
 ENTRYPOINT ["dotnet", "aspnetapp.dll"]
